EC-597 - Downgraded mysql connector version and fixed more failing tests